# aelita

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  aelita.service  config.toml.buildbot-example  config.toml.example  config.toml.jenkins-example  config.toml.taskcluster-example  config.toml.travis-example  rust-target-version
infra/: SETUP.md  aelita-ing.yaml  aelita-ingress.yml  aelita-volumes.yaml  aelita.yaml  build_dynamic.sh  build_static.sh  deploy.sh  find_overlong_lines.sh  install_rust.sh
infra/caddy/: Caddyfile  Dockerfile
infra/nginx/: Dockerfile  default.conf
signup/: .dockerignore  .gitignore  Dockerfile  activate.sh  config.sh.example  main.py  requirements.txt
signup/static/: invite-dialog.js  manage.js  style.css  style2.css  style3.css  style4.css  style5.css
signup/templates/: index.html  manage.html
src/: main.rs
src/ci/: buildbot.rs  github_status.rs  jenkins.rs  mod.rs
src/config/: mod.rs  toml.rs  twelvef.rs
src/db/: mod.rs  postgres.rs  sqlite.rs
src/pipeline/: mod.rs  test.rs
src/ui/: comments.rs  github.rs  mod.rs
src/util/: crypto.rs  github_headers.rs  mod.rs  rate_limited_client.rs
src/vcs/: git.rs  github.rs  mod.rs
src/view/: auth.rs  (+2 more)
static-binary/: .gitignore  Dockerfile  build.dockerfile  build.ps1  build.sh  kheaders-target-version  libressl-target-version  musl-target-version  rustc  sqlite-target-version
tests/: .gitignore  frewsxcv_test.json  test-github-round-trip-cloud.toml  test-github-round-trip-status.toml  test-github-round-trip-with-postgres.toml  test-github-round-trip.rs  test-github-round-trip.toml  test_null_body.json
(+2 files in other folders)
