[package]
name = "aelita"
version = "0.1.0"
authors = ["Michael Howell <michael@notriddle.com>"]
license = "MIT / Apache-2.0"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
crossbeam = "0.2"
env_logger = "0.3"
hex = "0.2.0"
horrorshow = "0.5.6"
hyper = "0.9.5"
lazy_static = "0.2.1"
log = "0.3"
openssl = "0.7.13"
postgres = "0.11.9"
quick-error = "1.0.0"
quickersort = "2.0.1"
regex = "0.1.71"
rusqlite = "0.7.2"
serde = "0.7.5"
serde_json = "0.7.0"
serde_macros = "0.7.5"
spmc = "0.2.1"
toml = "0.1.30"
url = "1.1.1"
void = "1"
